[add] connection to redis
